...
    <string name="preferences_error_blank">Field cannot be blank.</string>
    <string name="preferences_show_secret">Show secret</string>
    <string name="preferences_hide_secret">Hide secret</string>

    <string name="my_collection_header">My Collection</string>
    <string name="collection_empty_message">Nothing to see here.</string>
    <string name="collection_filter_latest">Latest</string>
    <string name="clear_search_description">Clear search</string>
    <string name="added_on_label">Added on: %1$s</string>
    <string name="hours_spent_label">%1$d h</string>

    <string name="status_backlog">Backlog</string>
    <string name="status_playing">Playing</string>
    <string name="status_finished">Finished</string>
    <string name="status_platinum">Platinum</string>
    <string name="status_paused">Paused</string>
    <string name="status_dropped">Dropped</string>
    <string name="status_none">None</string>

...
