...
import androidx.compose.ui.text.input.VisualTransformation
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import isel.dei.pdm.mygamevault.R
import isel.dei.pdm.mygamevault.ui.theme.MyGameVaultTheme

internal const val PREFERENCES_SCREEN_TAG = "PreferencesScreen"
internal const val CLIENT_ID_INPUT_TAG = "ClientIdInput"
internal const val CLIENT_SECRET_INPUT_TAG = "ClientSecretInput"
internal const val SAVE_BUTTON_TAG = "SaveButton"
internal const val LOADING_INDICATOR_TAG = "LoadingIndicator"

@Composable
...
